--- a/src/Components/myNavBar.css
+++ b/src/Components/myNavBar.css
@@ -3,9 +3,11 @@
 
 
 .mynavbar {
-        margin: 5px;
+        margin: 50px;
         padding: 0;
-        width: 80p
+        width: 80p;
+        color:aqua;
+     
 }
 
     
