--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,7 +1,7 @@
 
 
 .Jumbotron{
-    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUeisG7-zNjrMBj4zzNLOwB7eA7WMbKExoJmaaPAjICcd6iF1z");
+    background-image:url("https://www.kickico.com/assets/_images/46108/436e8fc5bead344.png");
     color: aqua;
     
     
@@ -17,16 +17,16 @@
 .tick{
     color:white;
     font-weight: bold;
-    background-color: black
+    background-color:rgb(57, 30, 131) 
 }
 
 .marquee {
     width: 1250px;
     margin: 0 auto;
-    white-space: nowrap;
+    white-space: pre;
     overflow: hidden;
     box-sizing: border-box;
-    background-color:black;
+    background-color:rgb(0, 13, 71);
     color:yellow;
     font-weight: bold;
     font-size: 25px
