--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -9,6 +9,12 @@
 .hometicker{
     font-weight: bold
 }
+.dummy{
+    color: black;
+    font-size: 15px;
+    font-style: normal;
+  float: left;
+}
 
 .logoutBtn{
     float: right;
